# CoolRayTracer

./: .gitignore  CMakeLists.txt
CoolRayTracer/: CMakeLists.txt  CoolRayTracer.cpp  CoolRayTracer.h  MathUtils.h  Ray.h  Vec2.h  vec3.h  win32_main.cpp
SampleTest/: CMakeLists.txt  DiskSampleTest.cpp
